--- a/package.json
+++ b/package.json
@@ -17,12 +17,12 @@
     "eslint": "8.57.0",
     "eslint-config-next": "14.1.0",
     "next": "14.1.0",
-    "next-video": "^0.15.0",
     "next-videos": "^1.4.1",
     "nodemailer": "^6.9.11",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-responsive-masonry": "^2.2.0",
-    "react-router-dom": "^6.22.1"
+    "react-router-dom": "^6.22.1",
+    "react-scripts": "^5.0.1"
   }
 }
